@@ -72,15 +72,15 @@ $(SERVER_DIR)/conf/ssl/valid_cert.pem: \
 		-extfile data/ssl/req_exts.conf -extensions v3_req_ext
 
 test: $(SERVER_DIR)/.test-setup unit_tests
-	py.test
+	python3 -m pytest
 
 test-drive: $(SERVER_DIR)/.test-setup
 	@py.test test_0500_drive.py
-	@py.test test_0600_roundtrip.py
-	@py.test test_0700_auto.py
+	@py.test test_0o600_roundtrip.py
+	@py.test test_0o700_auto.py
 
 test-auto: $(SERVER_DIR)/.test-setup
-	@py.test test_0700_auto.py
+	@py.test test_0o700_auto.py
 
 test-configs: $(SERVER_DIR)/.test-setup
 	@py.test test_0300_conf_validate.py
